# SCBA

./: .gitignore  .pre-commit-config.yaml  GITHUB_SETUP.md  HANDOFF_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PIPELINE_RUNNING.md  PROJECT_STATUS.md  PUSH_TO_GITHUB.sh  QUICKSTART.md  README.md  generate_visual_comparison.py  pyproject.toml  pytest.ini  run_ablation_study.py  run_full_scba_experiments.py  run_publication_experiments.py  run_scba_pipeline.py  synthetic_counterfactual_border_audit_scba_full_implementation_plan.md  test_all_xai_methods.py  test_border_editing.py  test_core_components.py  test_xai_pipeline.py
.github/: release-drafter.yml
.github/workflows/: ci.yml
docs/: RUN_CARD_TEMPLATE.md
experiments/configs/: unet_jsrt_baseline.yaml  unet_montgomery_baseline.yaml
manuscript/: MANUSCRIPT_README.md  references.bib  scba_manuscript.tex
scba/: __init__.py
scba/cf/: borders.py  gaussian_nodules.py  inpaint.py
scba/metrics/: cf_consistency.py  statistical_tests.py
scba/models/: __init__.py  unet.py
scba/scripts/: create_sanity_dataset.py  prep_jsrt.py  prep_montgomery.py  run_cf_sweep.py
scba/train/: __init__.py  eval_seg.py  losses.py  metrics.py  train_seg.py
scba/xai/: common.py
scba/xai/cam/: grad_cam_pp.py  hires_cam.py  seg_grad_cam.py
scba/xai/gradient/: integrated_gradients.py
scba/xai/perturb/: lime_seg.py  occlusion.py  rise.py  shap_seg.py
scripts/: monitor_pipeline.sh  run_full_pipeline.sh  start_background_pipeline.sh
tests/: __init__.py  test_data_loaders.py
