[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scba"
version = "0.1.0"
description = "Synthetic Counterfactual Border Audit for Segmentation Explainability"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI for Medical Imaging Lab"}
]
keywords = ["explainable-ai", "medical-imaging", "chest-xray", "segmentation", "counterfactual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.8.0",
    "albumentations>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
]

xai = [
    "captum>=0.6.0",
    "zennit>=0.5.0",
    "shap>=0.43.0",
    "lime>=0.2.0",
]

medical = [
    "pydicom>=2.4.0",
    "pydicom-seg>=0.4.0",
    "pynetdicom>=2.0.0",
    "SimpleITK>=2.3.0",
]

ui = [
    "streamlit>=1.29.0",
    "gradio>=4.8.0",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
]

tracking = [
    "wandb>=0.16.0",
    "mlflow>=2.9.0",
]

all = [
    "scba[dev,xai,medical,ui,tracking]",
]

[project.urls]
Homepage = "https://github.com/your-org/scba"
Documentation = "https://scba.readthedocs.io"
Repository = "https://github.com/your-org/scba"
Issues = "https://github.com/your-org/scba/issues"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=scba --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
